# haskell.pgd

./: README.md
Homework/Homework01/: Homework01.hs
Homework/Homework02/: Homework02.hs
Homework/Homework03/: Homework03.hs
Homework/Homework04/: Homework04.hs
Homework/Homework05/: Homework05.hs
Homework/Homework06/: Homework06.hs
Homework/Homework07/: Homework07.hs
Homework/Homework08/: Homework.hs
Homework/Homework09/: 1-Maze.hs  2-Forest.hs
Homework/Homework10/: Homework.hs
Homework/Homework11/: Homework.hs
Homework/Homework14/ForestGameHWSolution/: ForestGameHWSolution.cabal
Homework/Homework14/ForestGameHWSolution/app/: Main.hs
Homework/Homework14/ForestGameHWSolution/src/User/Actions/: Battle.hs
Lessons/Lesson13/Abstract/: Modules.hs
Lessons/Lesson13/Forest/: Forest.hs  Gameplay.hs  Levels.hs  Main.hs
